--- a/app/src/main/res/layout/activity_label_add.xml
+++ b/app/src/main/res/layout/activity_label_add.xml
@@ -1,9 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:background="@color/color_app_bg"
     android:layout_height="match_parent"
     tools:context="com.savor.resturant.activity.LabelAddActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <include
+        layout="@layout/layout_head_title"
+        />
+
+    <RelativeLayout
+        android:background="@drawable/bg_label_add"
+        android:layout_margin="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="50dp">
+        <EditText
+            android:padding="10dp"
+            android:layout_marginRight="50dp"
+            android:hint="请手动添加列表中没有的标签"
+            android:background="@color/transparent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/tv_add"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:gravity="center"
+            android:background="@drawable/bg_label_add_btn"
+            android:textColor="@color/white"
+            android:layout_alignParentRight="true"
+            android:text="添加"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent" />
+    </RelativeLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rlv_labels"
+        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+</LinearLayout>
