--- a/app/src/main/res/layout/activity_add_customer.xml
+++ b/app/src/main/res/layout/activity_add_customer.xml
@@ -34,21 +34,21 @@
                     android:orientation="vertical">
 
                     <EditText
+                        android:textColorHint="@color/app_gray"
+                        android:textColor="@color/color_222222"
+                        android:textSize="15sp"
                         android:maxLength="8"
-                        android:textSize="14sp"
                         android:id="@+id/et_name"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="55dp"
                         android:background="@color/transparent"
                         android:drawableLeft="@drawable/ico_person"
-                        android:drawablePadding="10dp"
+                        android:drawablePadding="15dp"
                         android:hint="请输入客户名称" />
 
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginBottom="10dp"
                         android:background="@color/divider_list" />
 
                     <LinearLayout
@@ -56,9 +56,11 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <EditText
+                            android:textColorHint="@color/app_gray"
+                            android:textColor="@color/color_222222"
+                            android:textSize="15sp"
                             android:maxLength="11"
                             android:inputType="number"
-                            android:textSize="14sp"
                             android:id="@+id/et_phone"
                             android:layout_weight="1"
                             android:drawablePadding="10dp"
@@ -66,7 +68,7 @@
                             android:hint="请输入手机号"
                             android:drawableLeft="@drawable/ico_phone"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content" />
+                            android:layout_height="55dp" />
                         <ImageView
                             android:id="@+id/iv_add"
                             android:layout_gravity="center_vertical"
@@ -91,7 +93,7 @@
                             android:id="@+id/et_second_mobile"
                             android:textSize="14sp"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_height="55dp"
                             android:background="@color/transparent"
                             android:drawableLeft="@drawable/ico_phone"
                             android:drawablePadding="10dp"
@@ -104,7 +106,10 @@
                     android:id="@+id/ll_upload_header"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="15dp"
                     android:gravity="center"
                     android:orientation="vertical">
 
@@ -118,31 +123,35 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:padding="5dp"
-                        android:text="上传头像" />
+                        android:padding="7dp"
+                        android:textSize="13sp"
+                        android:textColor="@color/color_text_black"
+                        android:text="（选填）" />
                 </LinearLayout>
             </LinearLayout>
 
             <View
-                android:background="#EDE6DE"
+                android:background="#ECE6DE"
                 android:layout_width="match_parent"
-                android:layout_height="20dp"/>
+                android:layout_height="10dp"/>
 
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
                 <TextView
-                    android:padding="10dp"
+                    android:textSize="15sp"
+                    android:textColor="@color/color_text_black"
+                    android:padding="15dp"
                     android:text="以下为选填内容 （可不填）"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
                 <LinearLayout
+                    android:padding="15dp"
                     android:gravity="center_vertical"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <ImageView
-                        android:layout_marginLeft="10dp"
                         android:src="@drawable/ico_sex"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
@@ -154,12 +163,13 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <RadioButton
+                            android:textSize="14sp"
                             android:paddingLeft="15dp"
                             android:paddingRight="15dp"
                             android:paddingTop="5dp"
                             android:paddingBottom="5dp"
                             android:id="@+id/rb_man"
-                            android:layout_marginRight="10dp"
+                            android:layout_marginRight="15dp"
                             android:textColor="@drawable/radio_sex_color_selector"
                             android:text="男"
                             android:button="@null"
@@ -168,12 +178,13 @@
                             android:layout_height="wrap_content" />
 
                         <RadioButton
+                            android:textSize="14sp"
                             android:paddingLeft="15dp"
                             android:paddingRight="15dp"
                             android:paddingTop="5dp"
                             android:paddingBottom="5dp"
                             android:id="@+id/rb_woman"
-                            android:layout_marginLeft="10dp"
+                            android:layout_marginLeft="15dp"
                             android:textColor="@drawable/radio_sex_color_selector"
                             android:text="女"
                             android:button="@null"
@@ -183,7 +194,7 @@
                     </RadioGroup>
                 </LinearLayout>
                 <View
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginLeft="15dp"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginTop="20dp"
@@ -192,9 +203,9 @@
                 <RelativeLayout
                     android:gravity="center_vertical"
                     android:id="@+id/rl_con_ability"
-                    android:paddingRight="10dp"
-                    android:paddingTop="15dp"
-                    android:paddingBottom="15dp"
+                    android:paddingRight="20dp"
+                    android:paddingTop="20dp"
+                    android:paddingBottom="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <TextView
@@ -202,7 +213,9 @@
                         android:layout_marginLeft="10dp"
                         android:drawablePadding="10dp"
                         android:gravity="center_vertical"
-                        android:hint="请选择消费能力"
+                        android:text="请选择消费能力"
+                        android:textSize="15sp"
+                        android:textColor="@color/app_gray"
                         android:drawableLeft="@drawable/ico_spend_ability"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
@@ -214,7 +227,7 @@
                         android:layout_height="wrap_content" />
                 </RelativeLayout>
                 <View
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginLeft="15dp"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginTop="5dp"
@@ -222,17 +235,19 @@
                     android:background="@color/divider_list" />
                 <RelativeLayout
                     android:id="@+id/rl_birthday"
-                    android:paddingRight="10dp"
-                    android:paddingTop="15dp"
-                    android:paddingBottom="15dp"
+                    android:paddingRight="20dp"
+                    android:paddingTop="20dp"
+                    android:paddingBottom="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <TextView
                         android:id="@+id/tv_birthday"
-                        android:layout_marginLeft="10dp"
-                        android:drawablePadding="10dp"
+                        android:layout_marginLeft="15dp"
+                        android:drawablePadding="15dp"
                         android:gravity="center_vertical"
-                        android:hint="请选择生日"
+                        android:text="请选择生日"
+                        android:textColor="@color/app_gray"
+                        android:textSize="15sp"
                         android:drawableLeft="@drawable/ico_birth"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
@@ -244,26 +259,26 @@
                         android:layout_height="wrap_content" />
                 </RelativeLayout>
                 <View
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginLeft="15dp"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:background="@color/divider_list" />
 
                 <RelativeLayout
-                    android:paddingTop="5dp"
-                    android:paddingBottom="5dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <EditText
                         android:id="@+id/et_birth_place"
-                        android:paddingTop="10dp"
-                        android:paddingBottom="10dp"
-                        android:layout_marginLeft="10dp"
+                        android:paddingTop="20dp"
+                        android:paddingBottom="20dp"
+                        android:layout_marginLeft="15dp"
                         android:background="@color/transparent"
-                        android:drawablePadding="10dp"
+                        android:drawablePadding="15dp"
                         android:gravity="center_vertical"
                         android:hint="请输入籍贯"
-                        android:textSize="14sp"
+                        android:textColorHint="@color/app_gray"
+                        android:textColor="@color/color_222222"
+                        android:textSize="15sp"
                         android:drawableLeft="@drawable/ico_birhtplace"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
@@ -275,20 +290,20 @@
                     android:layout_height="1dp"
                     android:background="@color/divider_list" />
                 <RelativeLayout
-                    android:paddingTop="5dp"
-                    android:paddingBottom="5dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <EditText
                         android:id="@+id/et_ticket_info"
-                        android:paddingTop="10dp"
-                        android:paddingBottom="10dp"
-                        android:textSize="14sp"
+                        android:paddingTop="20dp"
+                        android:paddingBottom="20dp"
+                        android:textSize="15sp"
                         android:layout_marginLeft="10dp"
                         android:background="@color/transparent"
-                        android:drawablePadding="10dp"
+                        android:drawablePadding="15dp"
                         android:gravity="center_vertical"
                         android:hint="请输入发票信息"
+                        android:textColorHint="@color/app_gray"
+                        android:textColor="@color/color_222222"
                         android:drawableLeft="@drawable/ico_ticket"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
@@ -305,15 +320,22 @@
 
         </LinearLayout>
     </ScrollView>
-    <TextView
-        android:textSize="16sp"
+    <LinearLayout
+        android:paddingTop="30dp"
         android:gravity="center"
-        android:textColor="@color/white"
-        android:background="@drawable/right_bg_button"
-        android:layout_marginBottom="20dp"
-        android:id="@+id/tv_save"
-        android:layout_gravity="center_horizontal"
-        android:text="保存"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content" />
+        android:paddingBottom="30dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:textSize="16sp"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:background="@drawable/right_bg_button"
+            android:id="@+id/tv_save"
+            android:layout_gravity="center_horizontal"
+            android:text="保存"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
 </LinearLayout>
